# update-fetch-derivations

./: Cargo.toml  README.md  README.tpl  default.nix  update-fetch-derivations  update-fetch-derivations.rs
test/: Makefile  fetch-from-github.nix  fetchgit-failure.nix  fetchgit-success.nix  fetchurl-success-2.nix  fetchurl-success.nix  result  shell.nix  test.hs
